--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon",
-    "dev": "nodemon index.js"
+    "dev": "nodemon"
   },
   "author": "",
   "license": "ISC",
